Theme update, "Usuario" added

--- a/WebAppLogin/Views/Home/vLogin.cshtml
+++ b/WebAppLogin/Views/Home/vLogin.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("vLogin", "Home", FormMethod.Post))
 {
     <fieldset>
-        <legend>Architecture Components</legend>
+        <legend>Bienvenido</legend>
 
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true)
@@ -20,13 +20,13 @@
         }
         <table>
             <tr>
-                <td>@Html.LabelFor(a => a.UserName)</td>
+                <td>@Html.Label("Usuario")</td>
                 <td>@Html.TextBoxFor(a => a.UserName)</td>
                 <td>@Html.ValidationMessageFor(a => a.UserName)</td>
             </tr>
             <tr>
                 <td>
-                    @Html.LabelFor(a => a.Password)
+                    @Html.Label("Contraseña")
                 </td>
                 <td>
                     @Html.PasswordFor(a => a.Password)
