--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -17,23 +17,22 @@
 <body>
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <div class="container">
-            <a href="../" class="navbar-brand">Customers App</a>
+            <a href="../" class="navbar-brand">TechHouse</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Customers <span class="caret"></span></a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Opciones<span class="caret"></span></a>
                         <div class="dropdown-menu" aria-labelledby="Customers">
                             @Html.ActionLink("Home", "Index", "Home", new { @class = "dropdown-item" })
                     <div class="dropdown-divider"></div>
-                            @Html.ActionLink("Customers", "vCustomers", "Home", new { @class = "dropdown-item" })
                     </div>
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://wrapbootstrap.com/?ref=bsw">@Session["FullName"]</a>
+                        <a class="nav-link" href="~/Views/">@Session["FullName"]</a>
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("Salir", "Logout", "Home", new { @class = "nav-link" })
