--- a/WebAppLogin/Views/Shared/_Layout_login.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout_login.cshtml
@@ -11,7 +11,7 @@
 <body>
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <div class="container">
-            <a href="../" class="navbar-brand">Customers App</a>
+            <a href="../" class="navbar-brand">TechHouse</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
