Adición de gestión de usuarios

--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -28,7 +28,8 @@
                         <div class="dropdown-menu" aria-labelledby="Customers">
                             @Html.ActionLink("Home", "Index", "Home", new { @class = "dropdown-item" })
                     <div class="dropdown-divider"></div>
-                    </div>
+                            @Html.ActionLink("Gestión de usuarios", "vReg_Admin", "Registros", new { @class = "dropdown-item" })
+                        </div>
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
