Actualización vista, no probado

--- a/WebAppLogin/Views/Registros/vReg_Admin.cshtml
+++ b/WebAppLogin/Views/Registros/vReg_Admin.cshtml
@@ -9,7 +9,7 @@
 
 <h2>Gestión de Usuarios</h2>
 @Html.CtrlTable(viewName: "vReg_Admin", id: "tblUsuariosAdmin", title: "Listado de usuarios",
-    columnsTitle: "ID, Tipo de Identificación, Nombre, Apellidos, Fecha de Nacimiento, Contraseña, Correo, Teléfono", ColumnsDataName: "Id,Tipo_Id,Nombre,Apellidos,Fecha_Nac,Contrasenna,Email,Telefono",
+    columnsTitle: "ID, Tipo de Identificación, Nombre, Apellidos, Fecha de Nacimiento, Correo, Teléfono", ColumnsDataName: "Id,Tipo_Id,Nombre,Apellidos,Fecha_Nac,Email,Telefono,Rol",
     onSelectFunction: "BindFields", colorHeader: "red")
 <div class="card-header">
     <div class="row pull-right">
@@ -31,7 +31,6 @@
                     @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
                     @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Apellidos", columnDataName: "Apellidos")
                     @Html.CtrlInput(id: "txtFechaNac", type: "date", label: "Fecha de Nacimiento", columnDataName: "Fecha_Nac")
-                    @Html.CtrlInput(id: "txtContrasenna", type: "text", label: "Constraseña", columnDataName: "Contrasenna")
                     @Html.CtrlInput(id: "txtEmail", type: "text", label: "Correo Electrónico", columnDataName: "Email")
                     @Html.CtrlInput(id: "txtTelefono", type: "text", label: "Número celular", columnDataName: "Telefono")
                 </form>
