Prueba de GET correcta

--- a/WebAppLogin/Views/Registros/vReg_Admin.cshtml
+++ b/WebAppLogin/Views/Registros/vReg_Admin.cshtml
@@ -9,7 +9,7 @@
 
 <h2>Gestión de Usuarios</h2>
 @Html.CtrlTable(viewName: "vReg_Admin", id: "tblUsuariosAdmin", title: "Listado de usuarios",
-    columnsTitle: "ID, Tipo de Identificación, Nombre, Apellidos, Fecha de Nacimiento, Correo, Teléfono,Rol,Estado", ColumnsDataName: "Id,Tipo_Id,Nombre,Apellidos,Fecha_Nac,Email,Telefono,Rol,Estado",
+    columnsTitle: "ID, Nombre, Apellidos, Fecha de Nacimiento, Correo, Teléfono,Rol,Estado", ColumnsDataName: "Id,Nombre,Apellidos,Fecha_Nac,Email,Telefono,Nombre_Rol,Estado",
     onSelectFunction: "BindFields", colorHeader: "red")
 <div class="card-header">
     <div class="row pull-right">
