Nulled DateTime value in Usuario to correct table display

--- a/WebAppLogin/Views/Registros/vReg_Admin.cshtml
+++ b/WebAppLogin/Views/Registros/vReg_Admin.cshtml
@@ -1,10 +1,12 @@
 ﻿@model Entities_POJO.Usuario
 @using WebApp.Helpers;
+<script src="~/Scripts/datetimeplugin.js"></script>
+<script src="~/Scripts/moment.js"></script>
+<script src="~/Scripts/moment-with-locales.js"></script>
 <script src="~/Scripts/Views/vReg_Admin.js"></script>
-
 @{
     ViewBag.Title = "vReg_Admin";
-    Layout = "~/Views/Shared/_Layout.cshtml";   
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Gestión de Usuarios</h2>
@@ -14,9 +16,15 @@
 <div class="card-header">
     <div class="row pull-right">
         <div class="col-md-8">OPCIONES</div>
+        <div>
+            <form id="forma_Usuario_Upd">
+                @Html.CtrlInput(id: "txtId", type: "text", label: "ID", columnDataName: "Id")
+                @Html.CtrlInput(id: "txtTipoId", type: "text", label: "Tipo de Identificación", columnDataName: "Tipo_Id")
+                @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
+                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Apellidos", columnDataName: "Apellidos")
+            </form>
+        </div>
         <div class="col-md-8">
-            @Html.CtrlButton(viewName: "vReg_Admin", id: "btnCreate", label: "Crear nuevo", onClickFunction: "Create", buttonType: "success")
-            @Html.CtrlButton(viewName: "vReg_Admin", id: "btnUpdate", label: "Guardar cambios", onClickFunction: "Update", buttonType: "info")
             @Html.CtrlButton(viewName: "vReg_Admin", id: "btnEnable", label: "Activar", onClickFunction: "Enable", buttonType: "info")
             @Html.CtrlButton(viewName: "vReg_Admin", id: "btnDisable", label: "Desactivar", onClickFunction: "Disable", buttonType: "info")
             @Html.CtrlButton(viewName: "vReg_Admin", id: "btnDelete", label: "Borrar", onClickFunction: "Delete", buttonType: "danger")
@@ -25,18 +33,19 @@
 </div>
 <div class="card-body">
     <div class="row">
-        <div class="col-lg-6">
-            <div class="bs-component">
-                <form id="forma_Reg_Admin">
-                    @Html.CtrlInput(id: "txtId", type: "text", label: "ID", columnDataName: "Id")
-                    @Html.CtrlInput(id: "txtTipoId", type: "text", label: "Tipo de Identificación", columnDataName: "Tipo_Id")
-                    @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
-                    @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Apellidos", columnDataName: "Apellidos")
-                    @Html.CtrlInput(id: "txtFechaNac", type: "date", label: "Fecha de Nacimiento", columnDataName: "Fecha_Nac")
-                    @Html.CtrlInput(id: "txtEmail", type: "text", label: "Correo Electrónico", columnDataName: "Email")
-                    @Html.CtrlInput(id: "txtTelefono", type: "text", label: "Número celular", columnDataName: "Telefono")
-                </form>
-            </div>
-        </div>
+        <div class="col-lg-6">Registro de Usuario Administrador</div>
+        <div class="col-lg-6"></div>
+    </div>
+    <div class="bs-component">
+        <form id="forma_Reg_Admin">
+            @Html.CtrlInput(id: "txtId", type: "text", label: "ID", columnDataName: "Id")
+            @Html.CtrlInput(id: "txtTipoId", type: "text", label: "Tipo de Identificación", columnDataName: "Tipo_Id")
+            @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
+            @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Apellidos", columnDataName: "Apellidos")
+            @Html.CtrlInput(id: "txtFechaNac", type: "date", label: "Fecha de Nacimiento", columnDataName: "Fecha_Nac")
+            @Html.CtrlInput(id: "txtEmail", type: "text", label: "Correo Electrónico", columnDataName: "Email")
+            @Html.CtrlInput(id: "txtTelefono", type: "text", label: "Número celular", columnDataName: "Telefono")
+        </form>
+        @Html.CtrlButton(viewName: "vReg_Admin", id: "btnCreate", label: "Crear nuevo", onClickFunction: "Create", buttonType: "success")
     </div>
 </div>
