--- a/WebAppLogin/Views/Shared/_Layout_login.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout_login.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customers App</title>
+    <title>TechHouse</title>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" />
