--- a/WebAppLogin/Views/Registros/vReg_Admin.cshtml
+++ b/WebAppLogin/Views/Registros/vReg_Admin.cshtml
@@ -24,19 +24,18 @@
                 @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Apellidos", columnDataName: "Apellidos")
             </form>
             <form id="forma_Usuario_Upd" style="display:none">
-                @Html.CtrlInput(id: "txtId", type: "text", label: "ID", columnDataName: "Tipo_Id")
                 @Html.CtrlInput(id: "txtId", type: "text", label: "ID", columnDataName: "Id")
                 @Html.CtrlInput(id: "txtTipoId", type: "text", label: "Tipo de Identificación", columnDataName: "Tipo_Id")
                 @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
                 @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Apellidos", columnDataName: "Apellidos")
-                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "DOB", columnDataName: "Fecha_Nac")
-                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "PWD", columnDataName: "Contrasenna")
-                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Email", columnDataName: "Email")
-                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Estado", columnDataName: "Estado")
-                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Telefono", columnDataName: "Telefono")
-                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "ID Rol", columnDataName: "Id_Rol")
-                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "ID Agencia", columnDataName: "Id_Agencia")
-                @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Verificado", columnDataName: "Verificado")
+                @Html.CtrlInput(id: "txtDOB", type: "text", label: "DOB", columnDataName: "Fecha_Nac")
+                @Html.CtrlInput(id: "txtPWD", type: "text", label: "PWD", columnDataName: "Contrasenna")
+                @Html.CtrlInput(id: "txtEmail", type: "text", label: "Email", columnDataName: "Email")
+                @Html.CtrlInput(id: "txtEstado", type: "text", label: "Estado", columnDataName: "Estado")
+                @Html.CtrlInput(id: "txtCel", type: "text", label: "Telefono", columnDataName: "Telefono")
+                @Html.CtrlInput(id: "txtRol", type: "text", label: "ID Rol", columnDataName: "Id_Rol")
+                @Html.CtrlInput(id: "txtAgencia", type: "text", label: "ID Agencia", columnDataName: "Id_Agencia")
+                @Html.CtrlInput(id: "txtVerifica", type: "text", label: "Verificado", columnDataName: "Verificado")
             </form>
         </div>
         <div class="col-md-8">
