--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -24,39 +24,36 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Opciones<span class="caret"></span></a>
-                        <div class="dropdown-menu" aria-labelledby="Customers">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Menú Principal<span class="caret"></span></a>
+                        <div class="dropdown-menu" aria-labelledby="Menú Principal">
                             @Html.ActionLink("Home", "Index", "Home", new { @class = "dropdown-item" })
-                    <div class="dropdown-divider"></div>
-                            @Html.ActionLink("Gestión de usuarios", "vReg_Admin", "Registros", new { @class = "dropdown-item" })
+                            <div class="dropdown-divider"></div>
+                            @Html.ActionLink("Perfil", "vPerfil_Administrador", "Perfiles", new { @class = "dropdown-item" })
+                            @Html.ActionLink("Gestión de Usuarios", "vReg_Admin", "Registros", new { @class = "dropdown-item" })
                         </div>
                 </ul>
-                <ul class="nav navbar-nav ml-auto">
+                <ul class="nav navbar-nav align-items-end">
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Views/">@Session["FullName"]</a>
-                    </li>
-                    <li class="nav-item">
-                        @Html.ActionLink("Salir", "Logout", "Home", new { @class = "nav-link" })
-
+                        @Html.ActionLink("Cerrar sesión", "Logout", "Home", new { @class = "text-secondary" })
                     </li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div class="container body-content" >
+    <div class="container body-content">
         <div class="alert alert-success alert-dismissable" style="display: none" id="alert_container">
             <button type="button" class="close" onclick="$('.alert').hide()">&times;</button>
             <span id="alert_message"></span>
         </div>
         @RenderBody()
         <hr />
-        
+
     </div>
 </body>
 @*<script>
-    $(document).ready(function () {
-        $('.alert').hide();
-    });
-</script>*@
+        $(document).ready(function () {
+            $('.alert').hide();
+        });
+    </script>*@
 </html>
