Correción de UsuarioManager

--- a/WebAppLogin/Views/Registros/vReg_Admin.cshtml
+++ b/WebAppLogin/Views/Registros/vReg_Admin.cshtml
@@ -32,10 +32,13 @@
                 @Html.CtrlInput(id: "txtPWD", type: "text", label: "PWD", columnDataName: "Contrasenna")
                 @Html.CtrlInput(id: "txtEmail", type: "text", label: "Email", columnDataName: "Email")
                 @Html.CtrlInput(id: "txtEstado", type: "text", label: "Estado", columnDataName: "Estado")
+                @Html.CtrlInput(id: "txtCodEmail", type: "text", label: "CodEmail", columnDataName: "Cod_Email")
+                @Html.CtrlInput(id: "txtCodCel", type: "text", label: "CodCel", columnDataName: "Cod_Celular")
                 @Html.CtrlInput(id: "txtCel", type: "text", label: "Telefono", columnDataName: "Telefono")
                 @Html.CtrlInput(id: "txtRol", type: "text", label: "ID Rol", columnDataName: "Id_Rol")
                 @Html.CtrlInput(id: "txtAgencia", type: "text", label: "ID Agencia", columnDataName: "Id_Agencia")
                 @Html.CtrlInput(id: "txtVerifica", type: "text", label: "Verificado", columnDataName: "Verificado")
+                @Html.CtrlInput(id: "txtNomRol", type: "text", label: "NombreRol", columnDataName: "Nombre_Rol")
             </form>
         </div>
         <div class="col-md-8">
