--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -24,17 +24,22 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Menú Principal<span class="caret"></span></a>
-                        <div class="dropdown-menu" aria-labelledby="Menú Principal">
-                            @Html.ActionLink("Home", "Index", "Home", new { @class = "dropdown-item" })
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Opciones</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
                             <div class="dropdown-divider"></div>
-                            @Html.ActionLink("Perfil", "vPerfil_Administrador", "Perfiles", new { @class = "dropdown-item" })
-                            @Html.ActionLink("Gestión de Usuarios", "vReg_Admin", "Registros", new { @class = "dropdown-item" })
+                            <a class="dropdown-item" href="#">Separated link</a>
                         </div>
+                    </li>
                 </ul>
-                <ul class="nav navbar-nav align-items-end">
+                <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        @Html.ActionLink("Cerrar sesión", "Logout", "Home", new { @class = "text-secondary" })
+                        <a class="nav-link" href="~/Views/">@Session["Nombre"]</a>
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Cerrar sesión", "Logout", "Home", new { @class = "nav-link" })
                     </li>
                 </ul>
             </div>
