--- a/WebAppLogin/Views/Shared/Error.cshtml
+++ b/WebAppLogin/Views/Shared/Error.cshtml
@@ -1,13 +1,35 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
+    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
+        <div class="container">
+            <a href="../" class="navbar-brand">TechHouse</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+            </div>
+        </div>
+    </div>
     <hgroup>
         <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h2>Usted no cuenta con los permisos para acceder a esta sección.</h2>
     </hgroup>
+    <div>
+        @Html.ActionLink("Regresar", "Logout", "Home", new { @class = "nav-link" })
+    </div>
 </body>
+@*<script>
+        $(document).ready(function () {
+            $('.alert').hide();
+        });
+    </script>*@
 </html>
