--- a/WebAppLogin/Views/Shared/_Layout.cshtml
+++ b/WebAppLogin/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 <body>
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <div class="container">
-            <a href="../" class="navbar-brand">TechHouse</a>
+            <a href="#" class="navbar-brand">TechHouse</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,17 +26,15 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Opciones</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            @Html.ActionLink("Gestión de Suscripciones", "vPerfil_Admin_Suscripciones", "Perfiles", new { @class = "nav-link" })
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
+                            @Html.ActionLink("Gestión de usuarios", "vReg_Admin", "Registros", new { @class = "nav-link" })
                         </div>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Views/">@Session["Nombre"]</a>
+                        @Html.ActionLink((string)Session["Nombre"], "vPerfil_Administrador", "Perfiles", new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("Cerrar sesión", "Logout", "Home", new { @class = "nav-link" })
