--- a/WebAppLogin/Views/Shared/Error.cshtml
+++ b/WebAppLogin/Views/Shared/Error.cshtml
@@ -24,7 +24,7 @@
         <h2>Usted no cuenta con los permisos para acceder a esta sección.</h2>
     </hgroup>
     <div>
-        @Html.ActionLink("Regresar", "Logout", "Home", new { @class = "nav-link" })
+        @Html.ActionLink("Regresar", "Index", "Home", new { @class = "nav-link" })
     </div>
 </body>
 @*<script>
