ID como parámetro en la vista de perfil

--- a/WebAppLogin/Views/Perfiles/vPerfil_Administrador.cshtml
+++ b/WebAppLogin/Views/Perfiles/vPerfil_Administrador.cshtml
@@ -3,6 +3,7 @@
 <script src="~/Scripts/datetimeplugin.js"></script>
 <script src="~/Scripts/moment.js"></script>
 <script src="~/Scripts/moment-with-locales.js"></script>
+<script src="~/Scripts/Views/ControlActions.js"></script>
 <script src="~/Scripts/Views/vPerfil_Administrador.js"></script>
 
 @{
