Activar, desactivar, modificar y eliminar propiedades probado.

--- a/WebAppLogin/Views/Perfiles/vPerfil_Administrador.cshtml
+++ b/WebAppLogin/Views/Perfiles/vPerfil_Administrador.cshtml
@@ -24,4 +24,5 @@
             @Html.CtrlInput(id: "txtTelefono", type: "text", label: "Teléfono", columnDataName: "Telefono")
         </form>
     </div>
+    @Html.CtrlButton(viewName: "vPerfil_Administrador", id: "btnGuardar", label: "Guardar cambios", onClickFunction: "Update", buttonType: "info")
 </div>
