Vista ya carga información de perfil de Admin

--- a/WebAppLogin/Views/Perfiles/vPerfil_Administrador.cshtml
+++ b/WebAppLogin/Views/Perfiles/vPerfil_Administrador.cshtml
@@ -15,7 +15,7 @@
     Actualización de Datos
     <div class="row">
         <form id="forma_Admin_Upd">
-            @Html.CtrlInput(id: "txtId", type: "text", label: "ID", columnDataName: "Id")
+            @Html.CtrlInputDisabled(id: "txtId", type: "text", label: "ID", columnDataName: "Id")
             @Html.CtrlInput(id: "txtTipoId", type: "text", label: "Tipo de Identificación", columnDataName: "Tipo_Id")
             @Html.CtrlInput(id: "txtNombre", type: "text", label: "Nombre", columnDataName: "Nombre")
             @Html.CtrlInput(id: "txtApellidos", type: "text", label: "Apellidos", columnDataName: "Apellidos")
