--- a/WebAppLogin/Views/Home/Index.cshtml
+++ b/WebAppLogin/Views/Home/Index.cshtml
@@ -1,2 +1,2 @@
 ﻿<script src="~/Scripts/Views/vIndex.js"></script>
-@Html.CtrlChart("vIndex", "myChart", "Millenials customers","'Millenials','Other generations'","bar",onLoadFunction: "GetDataToChart")
+@*Html.CtrlChart("vIndex", "myChart", "Millenials customers","'Millenials','Other generations'","bar",onLoadFunction: "GetDataToChart")*@
