--- a/WebAppLogin/Views/Home/vLogin.cshtml
+++ b/WebAppLogin/Views/Home/vLogin.cshtml
@@ -19,30 +19,34 @@
             @ViewBag.Message
         </div>
     }
-    <table>
-        <tr>
-            <td>@Html.Label("Correo Electrónico")</td>
-            <td>@Html.TextBoxFor(a => a.Email)</td>
-            <td>@Html.ValidationMessageFor(a => a.Email)</td>
-        </tr>
-        <tr>
-            <td>
-                @Html.Label("Contraseña")
-            </td>
-            <td>
-                @Html.PasswordFor(a => a.Contrasenna)
-            </td>
-            <td>
-                @Html.ValidationMessageFor(a => a.Contrasenna)
-            </td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Login" />
-            </td>
-            <td></td>
-        </tr>
-    </table>
+<table>
+    <tr>
+        <td>@Html.Label("Correo Electrónico")</td>
+        <td>@Html.TextBoxFor(a => a.Email)</td>
+        <td>@Html.ValidationMessageFor(a => a.Email)</td>
+    </tr>
+    <tr>
+        <td>
+            @Html.Label("Contraseña")
+        </td>
+        <td>
+            @Html.PasswordFor(a => a.Contrasenna)
+        </td>
+        <td>
+            @Html.ValidationMessageFor(a => a.Contrasenna)
+        </td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>
+            <input type="submit" value="Login" />
+        </td>
+        <td></td>
+    </tr>
+    <tr>
+        <td><a href="@Url.Action("RegistrarCuenta", "Home")"><span>Registrarse</span></a></td>
+        <td></td>
+    </tr>
+                </table>
 </fieldset>
 }  
