--- a/WebAppLogin/Views/Shared/_LayoutRegistrarCuenta.cshtml
+++ b/WebAppLogin/Views/Shared/_LayoutRegistrarCuenta.cshtml
@@ -23,22 +23,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Opciones</a>
+                    @*<li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Registrarse</a>
                         <div class="dropdown-menu">
-                            @Html.ActionLink("Gestión de Suscripciones", "vPerfil_Admin_Suscripciones", "Home", null, new { @class = "nav-link" })
-                            <div class="dropdown-divider"></div>
-                            @Html.ActionLink("Gestión de usuarios", "vReg_Admin", "Home", null, new { @class = "nav-link" })
-                            @Html.ActionLink("Gestión de propiedades", "vPropiedades", "Home", null, new { @class = "nav-link" })
+                            <a class="dropdown-item" href="#">Banco</a>
+                            <a class="dropdown-item" href="#">Administrador</a>
+                            <a class="dropdown-item" href="#">Agencia Bienes Raices</a>
                         </div>
+                    </li>*@
+                    <li class="nav-item">
+                        @Html.ActionLink("Registrarse", "RegistrarCuenta", "Home", new { @class = "nav-link" })
                     </li>
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        @Html.ActionLink("Perfil", "AccountProfile", "Home", new { id = Session["UserID"] }, new { @class = "nav-link" })
-                    </li>
-                    <li class="nav-item">
-                        @Html.ActionLink("Cerrar sesión", "Logout", "Home", null, new { @class = "nav-link" })
+                        <a class="nav-link" href="~/Views/">@Session["FullName"]</a>
                     </li>
                 </ul>
             </div>
